<resources>
    <string name="app_name">Snack Track</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addtoplanner">Add to Planner</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="loginBtn">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_upBtn">SIGN UP</string>
    <string name="register">REGISTER</string>
    <string name="registerTxtView">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login.</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register.</string>
    <string name="logout">LOGOUT</string>
    <string name="welcome_to">Welcome to</string>
</resources>